@@ -12,7 +12,8 @@ interface IContentManager : nsISupports
   boolean writeLibrary();
   boolean removeBookById(in ACString id);
   boolean addBookFromPath(in AString path);
-  boolean getBookById(in ACString id, out AUTF8String path, out AUTF8String title, 
+  boolean getBookById(in ACString id, out AUTF8String path, out PRBool relativeLibraryPath, 
+		      out AUTF8String title, 
 		      out AUTF8String indexPath, out AUTF8String indexType, out AUTF8String description,
 		      out AUTF8String articleCount, out AUTF8String mediaCount, out AUTF8String size,
 		      out AUTF8String creator, out AUTF8String publisher, out AUTF8String date, 
